# vaultlint

./: .gitignore  README.md  clean-junit-xml.py  example_vault_spec.yaml  pyproject.toml
.github/workflows/: codeql.yml  python-app.yml
src/vaultlint/: __init__.py  __main__.py  cli.py  output.py  struct_validator.py
src/vaultlint/checks/: check_manager.py
src/vaultlint/checks/structure/: struct_checker.py  vspec.yaml
tests/: test_check_manager.py  test_cli.py  test_cli_edge_cases.py  test_cli_integration.py  test_cli_parsing.py  test_cli_unit.py  test_code_formatting.py  test_coverage.py  test_lint_context.py  test_main_module.py  test_output.py  test_path_operations.py  test_path_validation.py  test_rich_error_formatting.py  test_security.py  test_spec_resolution.py  test_struct_checker.py  test_struct_validator.py
